# fountain-core

./: AGENTS-CONTEXT.md  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: release.yml
script/rust/: compile.wasm.sh
tests/: integration_test.rs
www/: main.js
