[package]
name = "fountain-core"
version = "0.1.4"
edition = "2021"
description = "Convert any file to QR codes and back"
license = "Apache-2.0"
default-run = "fountain-encode"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["encode", "decode"]
encode = ["dep:qrcode", "dep:terminal_size", "dep:ctrlc"]
decode = ["dep:rqrr"]
wasm = ["dep:wasm-bindgen", "dep:rqrr", "dep:console_error_panic_hook", "dep:js-sys", "dep:web-sys"]

[dependencies]
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
raptorq = "1.8.1"
rqrr = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"
base45 = "3.1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
ctrlc = { version = "3.4", optional = true }
terminal_size = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[[bin]]
name = "fountain-encode"
path = "src/bin/encode.rs"
required-features = ["encode"]

[[bin]]
name = "fountain-decode"
path = "src/bin/decode.rs"
required-features = ["decode"]

[dev-dependencies]
tempfile = "3.24.0"
rand = "0.8"
